<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/lyric_top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimaryDark">

        <TextView
            android:id="@+id/lyric_song_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="false"
            android:gravity="center_horizontal"
            android:text="@string/song_title"
            android:textColor="@android:color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/lyric_artist_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lyric_song_title"
            android:layout_centerHorizontal="false"
            android:layout_marginBottom="8dp"
            android:gravity="center_horizontal"
            android:text="@string/artist_name"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lyric_top_bar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lyric_text"
                style="@style/SongsLyricStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/song_lyric"
                android:textStyle="italic" />
        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/lyric_bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimaryDark"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/write_review_view"
            style="@style/LyricBottomBarStyle"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:text="@string/write_review" />

        <TextView
            android:id="@+id/search_online_view"
            style="@style/LyricBottomBarStyle"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/search" />

        <TextView
            android:id="@+id/buy_online_view"
            style="@style/LyricBottomBarStyle"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:gravity="right|end"
            android:text="@string/buy_online" />

    </LinearLayout>

</RelativeLayout>