<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    tools:context=".WriteReview">

    <TextView
        android:id="@+id/review_song_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/song_title"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/review_artist_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/review_song_title"
        android:layout_marginBottom="16dp"
        android:text="@string/artist_name"
        android:textColor="@color/colorPrimaryDark" />

    <EditText
        android:id="@+id/review_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/review_artist_name"
        android:layout_marginBottom="16dp"
        android:autofillHints="@string/write_review_title"
        android:hint="@string/write_review_title" />

    <EditText
        android:id="@+id/review_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/review_title"
        android:layout_marginBottom="16dp"
        android:autofillHints="@string/write_review_body"
        android:gravity="start"
        android:hint="@string/write_review_body" />

    <Button
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="Submit"
        android:onClick="submitButton"
        android:textColor="@color/colorPrimaryDark" />

</RelativeLayout>