<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/album_cover"
        style="@style/AlbumCoverListStyle"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_margin="16dp"
        app:srcCompat="@drawable/achida_music" />

    <TextView
        android:id="@+id/song_title"
        style="@style/SongTitleListStyle"
        android:layout_toRightOf="@id/album_cover"
        android:layout_toEndOf="@id/album_cover"
        android:text="@string/song_title" />

    <TextView
        android:id="@+id/artist_name"
        style="@style/ArtistNameListStyle"
        android:layout_below="@id/song_title"
        android:layout_toRightOf="@id/album_cover"
        android:layout_toEndOf="@id/album_cover"
        android:text="@string/artist_name" />

    <TextView
        android:id="@+id/album_name"
        style="@style/AlbumNameListStyle"
        android:layout_below="@id/artist_name"
        android:layout_toRightOf="@id/album_cover"
        android:layout_toEndOf="@id/album_cover"
        android:text="@string/album_name" />
</RelativeLayout>