<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_activity_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/nav_top_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimaryDark">

        <TextView
            android:id="@+id/sort_artists"
            style="@style/TopBarStyle"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/artist_name_view" />

        <EditText
            android:id="@+id/search_form"
            style="@style/TopBarStyle"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:gravity="center_horizontal|center_vertical"
            android:hint="@string/search" />

        <TextView
            android:id="@+id/sort_albums"
            style="@style/TopBarStyle"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerHorizontal="false"
            android:layout_centerVertical="true"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/album_name_view" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nav_top_view">

        <ListView
            android:id="@+id/song_list_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"></ListView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/nav_bottom_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true">

        <TextView
            style="@style/BottomBarStyle"
            android:layout_weight="1"
            android:layout_marginTop="8dp"
            android:text="@string/now_playing_view" />

        <TextView
            android:id="@+id/song_title_main"
            style="@style/BottomBarStyle"
            android:layout_weight="1"
            android:layout_marginBottom="8dp"
            android:text="@string/song_title" />
    </LinearLayout>

</RelativeLayout>